[project]
name = "llmopsagentplatform"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "aiofiles==24.1.0",
    "aiohappyeyeballs==2.4.4",
    "aiohttp==3.11.11",
    "aiolimiter==1.2.1",
    "aiosignal==1.3.2",
    "alembic==1.14.1",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "anyio==4.8.0",
    "async-timeout==4.0.3",
    "attrs==24.3.0",
    "authlib==1.3.1",
    "backoff==2.2.1",
    "bce-python-sdk==0.9.25",
    "beautifulsoup4==4.12.3",
    "billiard==4.2.1",
    "blinker==1.9.0",
    "cachetools==5.5.1",
    "celery==5.4.0",
    "certifi==2024.12.14",
    "cffi==1.17.1",
    "chardet==5.2.0",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1",
    "click-repl==0.3.0",
    "colorama==0.4.6",
    "concurrent-log-handler==0.9.25",
    "cos-python-sdk-v5==1.9.33",
    "crcmod==1.7",
    "cryptography==44.0.0",
    "dashscope==1.22.1",
    "dataclasses-json==0.6.7",
    "deprecation==2.1.0",
    "dill==0.3.9",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dnspython==2.7.0",
    "duckduckgo-search==7.2.1",
    "email-validator==2.2.0",
    "emoji==2.14.1",
    "eval-type-backport==0.2.2",
    "exceptiongroup==1.2.2",
    "faiss-cpu==1.9.0.post1",
    "filelock==3.17.0",
    "filetype==1.2.0",
    "flask==3.1.0",
    "flask-cors==5.0.0",
    "flask-login==0.6.3",
    "flask-migrate==4.1.0",
    "flask-sqlalchemy==3.1.1",
    "flask-weaviate==1.1.0",
    "flask-wtf==1.2.2",
    "frozenlist==1.5.0",
    "fsspec==2024.12.0",
    "future==1.0.0",
    "greenlet==3.1.1",
    "grpcio==1.70.0",
    "grpcio-health-checking==1.70.0",
    "grpcio-tools==1.70.0",
    "gunicorn==23.0.0",
    "h11==0.14.0",
    "html5lib==1.1",
    "httpcore==1.0.7",
    "httpx==0.28.1",
    "httpx-sse==0.4.1",
    "huggingface-hub==0.34.4",
    "idna==3.10",
    "injector==0.22.0",
    "itsdangerous==2.2.0",
    "jieba==0.42.1",
    "jinja2==3.1.5",
    "jiter==0.8.2",
    "joblib==1.4.2",
    "jsonpatch==1.33",
    "jsonpath-python==1.0.6",
    "jsonpointer==3.0.0",
    "kombu==5.4.2",
    "langchain==0.3.27",
    "langchain-community==0.3.27",
    "langchain-core==0.3.74",
    "langchain-huggingface==0.3.1",
    "langchain-ollama==0.3.6",
    "langchain-openai==0.3.30",
    "langchain-text-splitters==0.3.9",
    "langchain-weaviate==0.0.3",
    "langdetect==1.0.9",
    "langgraph==0.2.67",
    "langgraph-checkpoint==2.0.10",
    "langgraph-sdk==0.1.51",
    "langsmith==0.4.14",
    "lxml==5.3.0",
    "mako==1.3.8",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "marshmallow==3.26.0",
    "mdurl==0.1.2",
    "mistune==3.1.2",
    "mpmath==1.3.0",
    "msgpack==1.1.0",
    "multidict==6.1.0",
    "multiprocess==0.70.17",
    "mypy-extensions==1.0.0",
    "ndjson==0.3.1",
    "nest-asyncio==1.6.0",
    "networkx==3.4.2",
    "nltk==3.9.1",
    "numpy==1.26.4",
    "olefile==0.47",
    "ollama==0.5.3",
    "openai==1.99.9",
    "optionaldict==0.1.2",
    "orjson==3.10.15",
    "packaging==24.2",
    "pandas==2.2.3",
    "pillow==11.1.0",
    "portalocker==3.1.1",
    "primp==0.10.1",
    "prompt-toolkit==3.0.50",
    "propcache==0.2.1",
    "protobuf==5.29.3",
    "psutil==6.1.1",
    "psycopg2-binary==2.9.10",
    "pycparser==2.22",
    "pycryptodome==3.21.0",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "pydantic-settings==2.10.1",
    "pygments==2.19.1",
    "pyjwt==2.10.1",
    "pypdf==5.1.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.0.1",
    "python-iso639==2024.10.22",
    "python-magic==0.4.27",
    "python-oxmsg==0.0.1",
    "python-pptx==1.0.2",
    "pytz==2024.2",
    "pywin32==308",
    "pyyaml==6.0.2",
    "qianfan==0.4.12.2",
    "rapidfuzz==3.11.0",
    "redis==5.2.1",
    "regex==2024.11.6",
    "requests==2.32.3",
    "requests-toolbelt==1.0.0",
    "rich==13.9.4",
    "safetensors==0.5.2",
    "scikit-learn==1.7.1",
    "scipy==1.15.3",
    "sentence-transformers==5.1.0",
    "shellingham==1.5.4",
    "simsimd==4.4.0",
    "six==1.17.0",
    "sniffio==1.3.1",
    "soupsieve==2.6",
    "sqlalchemy==2.0.37",
    "sympy==1.14.0",
    "tenacity==8.5.0",
    "threadpoolctl==3.6.0",
    "tiktoken==0.8.0",
    "tokenizers==0.21.0",
    "torch==2.8.0",
    "tqdm==4.67.1",
    "transformers==4.48.1",
    "typer==0.15.1",
    "typing-extensions==4.12.2",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.1",
    "unstructured==0.16.15",
    "unstructured-client==0.29.0",
    "urllib3==2.3.0",
    "validators==0.34.0",
    "vine==5.1.0",
    "wcwidth==0.2.13",
    "weaviate-client==4.16.7",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "wechatpy==1.8.18",
    "werkzeug==3.1.3",
    "wikipedia==1.4.0",
    "wrapt==1.17.2",
    "wtforms==3.2.1",
    "xlsxwriter==3.2.2",
    "xmltodict==0.14.2",
    "yarl==1.18.3",
    "zstandard==0.23.0",
]

[tool.uv.workspace]
members = [
    "api",
]
